[package]

name = "dsp-chain"
version = "0.4.5"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "bvssvni <bvssvni@gmail.com>",
    "indiv0 <contact@nikitapek.in>"
]
description = "Provides a Node trait and a Graph type for chaining together audio generators/processors in a dsp graph."
readme = "README.md"
keywords = ["audio", "dsp", "io", "modular", "graph"]
license = "MIT"
repository = "https://github.com/RustAudio/dsp-chain.git"
homepage = "https://github.com/RustAudio/dsp-chain"


[lib]

name = "dsp"
path = "./src/lib.rs"

[dependencies]
petgraph = "*"
sound_stream = "*"
