[package]

name = "dsp-chain"
version = "0.9.0"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "bvssvni <bvssvni@gmail.com>",
    "indiv0"
]
description = "Provides a Node trait and a Graph type for chaining together audio generators/processors in a dsp graph."
readme = "README.md"
keywords = ["audio", "dsp", "io", "modular", "graph"]
license = "MIT"
repository = "https://github.com/RustAudio/dsp-chain.git"
homepage = "https://github.com/RustAudio/dsp-chain"


[lib]

name = "dsp"
path = "./src/lib.rs"

[dependencies]
daggy = "0.1.4"
num = { version = "0.1.27", default-features = false }
sound_stream = "0.6.0"
